# nbsphinx

./: .editorconfig  .gitignore  .readthedocs.yml  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  Makefile  NEWS.rst  README.md  README.rst  conf.py  git_rebase_theme_branches.sh  helloworld.ipynb  index.rst  matplotlib.ipynb  nbsphinx.py  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  sphinx_ipynb.py  sympy.ipynb  theme_comparison.py
.binder/: README  postBuild  requirements.txt  start
.circleci/: artifact_path  artifacts.html  config.yml
binder/: README  requirements.txt
dev_utils/: theme_builder.py
doc/: README  README.md  a notebook name with spaces.ipynb  a-markdown-file-block.md  a-markdown-file-inline.md  a-markdown-file.md  a-normal-rst-file.rst  allow-errors-per-cell.ipynb  allow-errors.ipynb  code-cells.ipynb  conf.py  configuration.ipynb  configuring-kernels.ipynb  contents-manager.ipynb  custom-css.ipynb  custom-formats.ipynb  custom-formats.pct.py  example.ipynb  executing-notebooks.ipynb  fallback_theme.txt  hidden-cells.ipynb  index.ipynb  index.rst  installation.ipynb  ipython_kernel_config.py  links.ipynb  markdown-cells.ipynb  matplotlibrc  never-execute.ipynb  orphan.ipynb  pre-executed.ipynb  prolog-and-epilog.ipynb  prologue-and-epilogue.ipynb  raw-cells.ipynb  readthedocs-environment.yml  references.bib  references.rst  requirements.txt  rst.rst  sidebar.ipynb  (+4 more)
include-in-latex/: README.md  conf.py  latexmkrc  my-latex-document.tex  my-own-references.bib  pygmentize.py  sphinxlatexindbibtoc.sty  sphinxlatexstyleheadings.sty
src/: nbsphinx.py
(+34 files in other folders)
